.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Component__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipLabel>Branch Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Committed_On__c</fullName>
        <label>Committed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Id ,  Flosum__Component_Name__c   , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexClass</fullName>
                    <default>true</default>
                    <label>ApexClass</label>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BaseSharingRule</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>CriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomApplicationComponent</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
                <value>
                    <fullName>CustomPermission</fullName>
                </value>
                <value>
                    <fullName>CustomTab</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>DashboardFolder</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>DocumentFolder</fullName>
                </value>
                <value>
                    <fullName>EmailFolder</fullName>
                </value>
                <value>
                    <fullName>EmailTemplate</fullName>
                </value>
                <value>
                    <fullName>EmailTemplateFolder</fullName>
                </value>
                <value>
                    <fullName>EntitlementProcess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_By__c</fullName>
        <description>Last Modification done by user on source org</description>
        <label>Committed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <description>Date the user modified component on source org</description>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Sync_Status__c</fullName>
        <label>Sync Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__View_Comparison__c</fullName>
        <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;),
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-5,5)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  )+&apos;apex/&apos;+ $Setup.Flosum__Credentials__c.Flosum__Namespace__c+&apos;componentcomparisondetail?source=&apos;+ Flosum__Branch__r.Id +&apos;&amp;target=&apos;+ Flosum__Branch__r.Flosum__Repository__r.Id+&apos;&amp;compid=&apos; +  Id + &apos;&amp;viewcomparison=true&apos;+ &apos;&amp;redirectTo=Branch&apos; ,TEXT(Flosum__Version__c),&apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Comparison</label>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>Flosum__Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Repository</fullName>
        <active>true</active>
        <label>Repository</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Flosum__ValidateComponent</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK( RecordTypeId ) || 
(RecordType.Name = &apos;Repository&apos; &amp;&amp; ISBLANK( Flosum__Repository__c ))  || (RecordType.Name = &apos;Branch&apos; &amp;&amp; ISBLANK( Flosum__Branch__c )))</errorConditionFormula>
        <errorMessage>Repository or Branch can not be empty.</errorMessage>
    </validationRules>
</CustomObject>